<resources>
    <string name="app_name">Event Box</string>
    <string name="logIn">Login</string>
    <string name="singUp">Sign Up</string>
    <string name="poweredBy">Powered by © 2019 Alexandra Cîtu</string>
    <string name="welcome">Welcome</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="verifyPassword">Verify Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userType">User Type: </string>
    <string name="eventPlanner">Event Planner</string>
    <string name="client">Client</string>
    <string name="myEvents">My Events</string>
    <string name="addEvent">Add New Event</string>
    <string name="myEventPlanners">My Event Planners</string>
    <string name="myClients">My Clients</string>
    <string name="toDoList">To Do List</string>
    <string name="logout">Log Out</string>
    <string name="eventTitle">Event Title</string>
    <string name="description">Description</string>
    <string name="location">Location: Search using button below</string>
    <string name="noGuests">Number of Guests</string>
    <string name="eventType">Event Type</string>
    <string name="toDo">To Do</string>
    <string name="addNewToDo">Add new To Do</string>
    <string name="done">Done</string>
    <string name="newToDo">Write a new To Do here&#8230;</string>
    <string name="google_maps_key">A</string>
    <string name="searchOnMap">Search on Google Maps</string>
    <string name="showOnMap">Show on Google Maps</string>
    <string name="subtitleClient">Manage your events with EventBox!</string>
    <string name="subtitleEventPlanner">Do more of what makes you awesome!</string>
    <string name="myEventsChart">My Events Chart</string>
    <string name="year">Year</string>
    <string name="selectedYear">Selected Year: </string>
    <string name="search">Search here...</string>
    <string name="rememberMe">Remember me</string>
</resources>
