<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_gradient"
    tools:context=".NewEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/eventTitle" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/description" />

        <EditText
            android:id="@+id/etNoGuests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/noGuests"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/location"/>

        <Button
            android:id="@+id/btnPlacePicker"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="placePicker"
            android:text="@string/searchOnMap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEventType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/eventType" />

            <Spinner
                android:id="@+id/spinnerEventType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/eventType"
                android:layout_marginLeft="50dp"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <CalendarView
            android:id="@+id/calendarViewNewEvent"
            android:layout_width="match_parent"
            android:layout_height="350dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEventPlanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/eventPlanner" />

            <Spinner
                android:id="@+id/spinnerEventPlanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/eventPlanner"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmitNewEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightPink"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:onClick="submitNewEvent"
            android:text="@string/addEvent" />
    </LinearLayout>
</ScrollView>